--- a/app/views/pages/admin/setOrderPassword.html
+++ b/app/views/pages/admin/setOrderPassword.html
@@ -20,14 +20,23 @@
 							</li>
 						</ul>
 						<div class="py50">
-							<form action="./密码设置 - 51卡务网_files/密码设置 - 51卡务网.html" method="post" id="newpass">
+							<!-- <form action="" method="post" id="newpass"> -->
 								<div class="form-group">
 									<div class="col-xs-2">
-										<label class="control-label" for="oldpsw">新支付密码：</label>
+										<label class="control-label" for="oldpsw">原支付密码：</label>
 									</div>
 									<div class="col-xs-4">
 										<div class="mr4">
 											<input class="form-control" id="oldpsw" name="oldpsw" type="password"></div>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-xs-2">
+										<label class="control-label" for="newpsw">新支付密码：</label>
+									</div>
+									<div class="col-xs-4">
+										<div class="mr4">
+											<input class="form-control" id="newpsw" name="newpsw" type="password"></div>
 									</div>
 								</div>
 								<div class="form-group">
@@ -45,9 +54,9 @@
 									<div class="col-xs-4 col-xs-offset-2">
 										<input type="hidden" name="refer" value="">
 										<input type="hidden" name="formhash" value="3f959c23">
-										<input class="btn btn-primary btn-block" type="submit" name="newpass" value="提交" onclick="return regform(this);"></div>
+										<input class="btn btn-primary btn-block" type="submit" name="newpass" value="提交" id="postpassword"></div>
 								</div>
-							</form>
+							<!-- </form> -->
 						</div>
 					</div>
 				</div>
@@ -55,7 +64,24 @@
 			</div>
 		</div>
 	</div>
-	<div class="backtop" id="back-to-top">
+	<script>
+		$("#postpassword").click(function (){
+			var data = {
+				oldpassword:$('#oldpsw').val(),
+				newpassword:$('#newpsw').val()
+			}
+			sajax('/changepaypassword','POST',data,function(data){
+				if(data.code == 200){
+					alert(data.msg)
+					window.location.reload();
+				}else{
+					alert(data.msg)
+				}
+			})
+			return false;
+		})
+	</script>
+<!-- 	<div class="backtop" id="back-to-top">
 		<ul class="backtop-group">
 			<li>
 				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
@@ -74,6 +100,6 @@
 		</ul>
 	</div>
 	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div>
+	<div class="modal-cover hide" id="modal-dialog-cover"></div> -->
 </body>
 </html>
