--- a/app/views/pages/admin/setPassword.html
+++ b/app/views/pages/admin/setPassword.html
@@ -20,7 +20,7 @@
 							</li>
 						</ul>
 						<div class="py50">
-							<form action="./密码设置 - 51卡务网_files/密码设置 - 51卡务网.html" method="post" id="newpass">
+							<!-- <form action="" method="post" id="newpass"> -->
 								<div class="form-group">
 									<div class="col-xs-2">
 										<label class="control-label" for="oldpsw">原登录密码：</label>
@@ -63,18 +63,34 @@
 									<div class="col-xs-4 col-xs-offset-2">
 										<input type="hidden" name="refer" value="">
 										<input type="hidden" name="formhash" value="3f959c23">
-										<input class="btn btn-primary btn-block" type="submit" name="newpass" value="提交" onclick="return regform(this);"></div>
+										<input class="btn btn-primary btn-block" type="submit" name="newpass" value="提交" id="postpassword"></div>
 								</div>
-							</form>
+							<!-- </form> -->
 						</div>
 					</div>
 				</div>
-				<script>function regform(obj) {if (formtest(obj, 1)) {if ($("#newpsw").val()!=$("#verifypsw").val()) {$("#verifypsw").addClass("form-input-error").forme6tip("二次密码输入不相同", 1);return false;} else {$("#verifypsw").removeClass("form-input-error");return true;}}return false;}</script>
+				<script>
+				$("#postpassword").click(function (){
+					var data = {
+						oldpassword:$('#oldpsw').val(),
+						newpassword:$('#newpsw').val()
+					}
+					sajax('/changepassword','POST',data,function(data){
+						if(data.code == 200){
+							alert(data.msg)
+							window.location.reload();
+						}else{
+							alert(data.msg)
+						}
+					})
+					return false;
+				})
+				</script>
 				<%- include ../../includes/userfooter.html %>
 			</div>
 		</div>
 	</div>
-	<div class="backtop" id="back-to-top">
+<!-- 	<div class="backtop" id="back-to-top">
 		<ul class="backtop-group">
 			<li>
 				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
@@ -93,6 +109,6 @@
 		</ul>
 	</div>
 	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div>
+	<div class="modal-cover hide" id="modal-dialog-cover"></div> -->
 </body>
 </html>
