--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -16,7 +16,6 @@
                             <li class="title">帮助中心</li>
                             <li>常见问题</li>
                             <li>服务条款</li>
-                            <li>API接口</li>
                         </ul>
                     </li>
                     <li>
@@ -36,11 +35,11 @@
                         </ul>
                     </li>
                 </ul>
-                <b class="quare"><img class="square" src="img/code.jpg" alt=""/></b>
+                <b class="quare"><img class="square" src="/img/code.jpg" alt=""/></b>
                 <span class="focus">
                     扫描二维码<br>
-                    关注快法务微信<br>
-                    创业一手掌握
+                    关注51卡务微信<br>
+                    卡务一手掌握
                 </span>
 
                 <div class="support">
@@ -57,23 +56,21 @@
             <p>
             <span>
                 友情链接:&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">企查查</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">36氪</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">i黑马</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">IT桔子</a>&nbsp;&nbsp;
-               <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">BOSS直聘</a> &nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">创投圈</a>&nbsp;&nbsp;
                 <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">新浪创业</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">腾讯创业</a>&nbsp;&nbsp;
                 <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">果壳网</a>&nbsp;&nbsp;
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">IT桔子</a>&nbsp;&nbsp;
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">创投圈</a>&nbsp;&nbsp;
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">i黑马</a>&nbsp;&nbsp;
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">腾讯创业</a>&nbsp;&nbsp;
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">BOSS直聘</a> &nbsp;&nbsp;
                 <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">京东智创</a>&nbsp;&nbsp;
                 <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">智诚包网</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">3V咖啡</a>
+                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">36氪</a>&nbsp;&nbsp;
             </span>
             </p>
 
             <p>
-                <span>copyright©2015-2016北京某某有限责任公司&nbsp;京ICP备xxxxxx号&nbsp;京公网安备xxxxxx号</span>
+                <span>copyright©2015-2016&nbsp;津和财世纪信息技术有限公司&nbsp;版权所有&nbsp;&nbsp;&nbsp;&nbsp;津ICP备15006089号-2</span>
             </p>
         </div>
 
