--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/datepicker.css">
 <link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/home_index.css"/>
 <link rel="stylesheet" type="text/css" href="/css/share_style.css">
 <link rel="stylesheet" href="/css/common.css"/>
 <link rel="stylesheet" href="/css/main.css"/>
@@ -14,6 +15,42 @@
 <script src="/js/jquery.cookie.js"></script>
 <script src="/js/base.js"></script>
 <script src="/js/shuai.js"></script>
+<!--<script src="/js/usereval.js"></script>-->
+
+<!--<link rel="stylesheet" href="/css/cardsRecovery/animate.css">-->
+<!--<link rel="stylesheet" href="/css/cardsRecovery/base.css">-->
+<!--<link rel="stylesheet" href="/css/cardsRecovery/datepicker.css">-->
+<!--<link rel="stylesheet" href="/css/cardsRecovery/index.css">-->
+<!--<script src="./cards_files/push.js"></script>
+<script src="/js/cardsRecovery/push(1).js"></script>
+<script src="/js/cardsRecovery/common.js"></script>
+<script src="./cards_files/jquery.js"></script>
+<script src="./cards_files/library.js"></script>
+<script src="./cards_files/jquery.jplayer.js"></script>
+<script src="./cards_files/jquery.placeholder.js"></script>
+<script src="./cards_files/jquery.datepicker.js"></script>
+<script src="./cards_files/jquery.autocomplete.js"></script>
+<script src="./cards_files/jquery.cookie.js"></script>
+<script src="./cards_files/base.js"></script>
+<script src="/js/cardsRecovery/jquery(1).js"></script>
+<script src="/js/cardsRecovery/library(1).js"></script>
+<script src="/js/cardsRecovery/jquery.jplayer(1).js"></script>
+<script src="/js/cardsRecovery/jquery.placeholder(1).js"></script>
+<script src="/js/cardsRecovery/jquery.datepicker(1).js"></script>
+<script src="/js/cardsRecovery/jquery.autocomplete(1).js"></script>
+<script src="/js/cardsRecovery/jquery.cookie(1).js"></script>
+<script src="/js/cardsRecovery/base(1).js"></script>-->
+<!--[if lt IE 9]>
+<script src="/js/html5shiv.min.js"></script>
+<script src="/js/respond.min.js"></script><![endif]--><!--[if IE 6]>
+<script src="/js/DD_belatedPNG.js"></script>
+<script>DD_belatedPNG.fix('.png');</script><![endif]-->
+<!--<script src="/js/cardsRecovery/share.js"></script>-->
+<!--<script type="text/javascript" async="async" charset="utf-8" src="/js/cardsRecovery/iconid_0.js"-->
+        <!--data-requiremodule="entrance"></script>-->
+<!--<link rel="stylesheet" href="/css/cardsRecovery/share_style0_24.css">-->
+<!--<script src="/js/cardsRecovery/share(1).js"></script>-->
+<!--<link rel="stylesheet" href="/css/cardsRecovery/share_style0_24(1).css">-->
 <!--[if lt IE 9]>
 <script src="/template/static/js/html5shiv.min.js"></script>
 <script src="/template/static/js/respond.min.js"></script>
