--- a/app/views/includes/header.html
+++ b/app/views/includes/header.html
@@ -1,8 +1,8 @@
 <div class="header">
     <div class="header-box">
         <div class="h-left">
-            <!--<i></i>-->
-            <span>天津市</span>
+            <i></i>
+            <span>全国</span>
             <!--<a class="drop" href="#"></a>-->
             <span class="one">|</span>
         </div>
@@ -14,14 +14,14 @@
             <% }else{ %>
                 <li><a class="username" href="/user/myaccount.html">hi,<%= user.member_code %></a></li>
                 <li class="one">|</li>
-                <li><a href="out.html">退出</a></li>
+                <li><a href="/out.html">退出</a></li>
             <% } %>
             <li class="one">|</li>
             <li><a href="/user/myaccount.html">我的订单</a></li>
             <li class="one">|</li>
             <li><a href="#">服务商入口</a></li>
             <li class="one">|</li>
-            <!--<li><b></b></li>-->
+            <li><b></b></li>
             <li><a href="#">移动应用</a></li>
             <!--<li><a class="drop" href="#"></a></li>-->
         </ul>
