--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -72,12 +72,22 @@
         <div class="hot-store">
             <div class="container">
                 <h2>热门推荐</h2>
-                <ul>
-                    <li class="store-pic"><img src="img/hotstore/123_07.png" alt=""/></li>
-                    <li class="store-pic"><img src="img/hotstore/123_09.png" alt=""/></li>
-                    <li class="store-pic"><img src="img/hotstore/123_11.png" alt=""/></li>
-                    <li class="store-pic"><img src="img/hotstore/123_13.png" alt=""/></li>
-                    <li class="store-pic"><img src="img/hotstore/123_15.png" alt=""/></li>
+                <ul id="hot-store">
+                    <li class="store-pic">
+						<a href="/user/cardsRecovery.html?cardstype=dianshang&cardsname=jd"><img src="img/hotstore/123_07.png"/></a>
+					</li>
+                    <li class="store-pic">
+						<a href="/user/cardsRecovery.html?cardstype=dianshang&cardsname=ymx"><img src="img/hotstore/123_09.png"/></a>
+					</li>
+                    <li class="store-pic">
+						<a href="/user/cardsRecovery.html?cardstype=dianshang&cardsname=yhd"><img src="img/hotstore/123_11.png"/></a>
+					</li>
+                    <li class="store-pic">
+						<a href="/user/cardsRecovery.html?cardstype=dianshang&cardsname=dd"><img src="img/hotstore/123_13.png"/></a>
+					</li>
+                    <li class="store-pic">
+						<a href="/user/cardsRecovery.html?cardstype=dianshang&cardsname=sn"><img src="img/hotstore/123_15.png"/></a>
+					</li>
                 </ul>
             </div>
         </div>
@@ -94,8 +104,81 @@
                 </ul>
             </div>
         </div>
-        <div class="user">
-            <img src="img/1_02.png"/>
+        <div class="userEval">
+           <div class="user-eval">
+              <h3 class="index-title">用户评价</h3>
+			   <ul class="overflowhidden ueInfo">
+				   <li style="display: none; padding-top: 12px;">
+					   快法务很好地体现了提高创业效率和降低创业成本的特点，是初创公司的绝对好帮手。
+				   </li>
+				   <li style="display: list-item;">
+					   对于创业公司而言，由于业务本身的创新性，会有很多法律方面的困惑，感谢快法务帮我们解决了这一切。
+				   </li>
+				   <li style="padding-top: 12px; display: none;">
+					   非常庆幸能够在创业初期找到快法务这样的伙伴，给我们提供了超出预期的专业服务！
+				   </li>
+				   <li style="padding-top: 12px; display: none;">
+					   在这个时候遇见快法务是件幸事，高效、低价、专业，很对创业团队的胃口
+				   </li>
+				   <li style="display: none;">
+					   快法务帮助创业团队解决一系列的人事,财务,法务等非核心业务，让团队能将时间和精力放在搭建核心产品上。我们已经将快法务推荐给到身边所有的创业朋友，用了都说好。
+				   </li>
+			   </ul>
+			   <div class="ueImgDiv">
+				   <ul class="overflowhidden ueImg">
+					   <li>
+						   <img class="imgW120 percentRadius50" src="img/usr/zhoujian.png" alt="">
+					   </li>
+					   <li>
+						   <img class="imgW120 percentRadius50" src="img/usr/xuhaibo.png" alt="">
+					   </li>
+					   <li>
+						   <img class="imgW120 percentRadius50" src="img/usr/wangjianfeng.png" alt="">
+					   </li>
+					   <li>
+						   <img class="imgW120 percentRadius50" src="img/usr/dengjianfei.jpg" alt="">
+					   </li>
+					   <li>
+						   <img class="imgW120 percentRadius50" src="img/usr/zhaojinglei.jpg" alt="">
+					   </li>
+				   </ul>
+			   </div>
+			   <ul class="overflowhidden ueName">
+				   <li style="display: none;">
+					   <h4>周坚</h4>
+					   <span>狐拍创始人</span>
+				   </li>
+				   <li style="display: list-item;">
+					   <h4>徐海波</h4>
+					   <span>百米厨房创始人</span>
+				   </li>
+				   <li style="display: none;">
+					   <h4>王剑锋</h4>
+					   <span>鸡窝网创始人</span>
+				   </li>
+				   <li style="display: none;">
+					   <h4>邓剑飞</h4>
+					   <span>Queenest创始人 </span>
+				   </li>
+				   <li style="display: none;">
+					   <h4>赵京雷</h4>
+					   <span>ReadFace创始人</span>
+				   </li>
+			   </ul>
+			   <ul class="overflowhidden ueBut">
+				   <li class=""></li>
+				   <li class="active"></li>
+				   <li class=""></li>
+				   <li class=""></li>
+				   <li class=""></li>
+			   </ul>
+			   <a href="javascript:" id="positLeft">
+				   <span class="s-uebut uebutLe"><i></i></span>
+			   </a>
+			   <a href="javascript:" id="positRight">
+				   <span class="s-uebut uebutRi"><i></i></span>
+			   </a>
+		   </div>
         </div>
         <div class="service">
             <img src="img/1_04.jpg"/>
@@ -107,7 +190,7 @@
 
                     <div>
                         <h3>资质认证</h3>
-                        <span>100%人工审核认证</span>
+                        <span>100%资质认证</span>
                     </div>
                 </div>
                 <div class="pay-f">
@@ -115,7 +198,7 @@
 
                     <div>
                         <h3>支付安全</h3>
-                        <span>明码支付标价及支付安全</span>
+                        <span>明码标价及支付安全</span>
                     </div>
                 </div>
                 <div class="pay-f">
@@ -123,7 +206,7 @@
 
                     <div>
                         <h3>专人服务</h3>
-                        <span>服务全程进行信息化监控</span>
+                        <span>一对一专业安全服务</span>
                     </div>
                 </div>
                 <div class="pay-f">
@@ -131,7 +214,7 @@
 
                     <div>
                         <h3>售后无忧</h3>
-                        <span>服务出问题客户经理全程跟进</span>
+                        <span>客户经理全程跟进</span>
                     </div>
                 </div>
 
@@ -141,7 +224,7 @@
     </div>
 </div>
 	<script>
-			if(window.chrome) {
+		if(window.chrome) {
 				$('.banner li').css('background-size', '100% 100%');
 			}
 
@@ -154,7 +237,7 @@
 			//  Find any element starting with a # in the URL
 			//  And listen to any click events it fires
 			$('a[href^="#"]').click(function() {
-				//  Find the target element
+				//  Find the target element-->
 				var target = $($(this).attr('href'));
 
 				//  And get its position
@@ -174,4 +257,107 @@
 				return false;
 			});
 		</script>
+    <script>
+		$(function(){
+			var pLeft = $("#positLeft");
+			var pRight = $("#positRight");
+			var sLi = $(".ueImg li");
+			var sList = $('.ueImg');
+			var pSpan = $(".ueBut li");
+			var sListWidth = sLi.outerWidth(true);
+			var sliLength = sLi.length;
+			var _now = 0; //这个是控制数字样式的计数器
+			var _now2 = 0; //这个是控制图片运动距离的计数器
+			var timer;
+
+			function pointAddClass()
+			{
+				var className = 'active';
+				pSpan.each(function(){
+					$(this).removeClass(className);
+					if ($(this).index() == _now)
+					{
+						$(this).addClass(className);
+					}
+				});
+			}
+
+			function fadeEffect(){
+				$(".ueInfo li").eq(_now).fadeIn(1000).siblings().fadeOut(1000);
+				$(".ueName li").eq(_now).fadeIn(1000).siblings().fadeOut(100);
+			}
+
+			function slipLeft()
+			{
+				if (_now == (sliLength-1))
+				{
+					_now = 0;
+				}
+				else
+				{
+					_now ++;
+				}
+				sList.animate({'left':-_now*sListWidth},500);
+				pointAddClass();
+				fadeEffect();
+			}
+			//左边按钮点击处理事件
+			pLeft.bind("click",function(){
+				if (_now == 0)
+				{
+					_now = (sliLength-1);
+				}
+				else
+				{
+					_now --;
+				}
+				sList.animate({'left':-_now*sListWidth},500);
+				fadeEffect();
+				pointAddClass();
+			});
+
+			//右边按钮点击处理事件
+			pRight.bind("click",function(){
+				slipLeft();
+			});
+
+			//小图标的点击处理事件
+			pSpan.bind("mouseover",function(){
+				var index = $(this).index();
+				_now = index;
+				sList.animate({'left':-index*sListWidth},500);
+				fadeEffect();
+				pointAddClass();
+			});
+
+			//定时器函数
+			function silder(){
+				slipLeft();
+			}
+
+			timer=setInterval(silder,10000);
+			//鼠标移动到图片上，定时器失效，离开定时器开始
+			$(".menuLi").hover(
+					function(){
+						clearInterval(timer);
+					},function(){
+						timer=setInterval(silder,10000);
+					}
+			);
+			pLeft.hover(
+					function(){
+						clearInterval(timer);
+					},function(){
+						timer=setInterval(silder,10000);
+					}
+			);
+			pRight.hover(
+					function(){
+						clearInterval(timer);
+					},function(){
+						timer=setInterval(silder,10000);
+					}
+			);
+		});
+	</script>
 	<%- include ../includes/footer.html %>
