--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -7,31 +7,31 @@
                     <li>
                         <ul>
                             <li class="title">交易方式</li>
-                            <li>全国交易方式</li>
-                            <li>当面交易方式</li>
+                            <li><a href="/help/help.html" target="_blank">全国交易方式</a></li>
+                            <li><a href="/help/help.html" target="_blank">当面交易方式</a></li>
                         </ul>
                     </li>
                     <li>
                         <ul>
                             <li class="title">帮助中心</li>
-                            <li>常见问题</li>
-                            <li>服务条款</li>
+                            <li><a href="/help/questions.html" target="_blank">常见问题</a></li>
+                            <li><a href="/company/agreement.html" target="_blank">服务条款</a></li>
                         </ul>
                     </li>
                     <li>
                         <ul>
                             <li class="title">关于我们</li>
-                            <li>公司简介</li>
-                            <li>免责声明</li>
-                            <li>联系我们</li>
-                            <li>商家合作</li>
+                            <li><a href="/company/introduction.html" target="_blank">公司简介</a></li>
+                            <li><a href="/company/disclaimer.html" target="_blank>免责声明</a></li>
+                            <li><a href="/company/contctus.html" target="_blank">联系我们</a></li>
+                            <li><a href="/help/cooperation.html" target="_blank">商家合作</a></li>
                         </ul>
                     </li>
                     <li class="last">
                         <ul>
                             <li class="title">关注我们</li>
-                            <li>新浪微博</li>
-                            <li>官方微信</li>
+                            <li><a href="">新浪微博</a></li>
+                            <li><a href="">官方微信</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -56,16 +56,14 @@
             <p>
             <span>
                 友情链接:&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">新浪创业</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">果壳网</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">IT桔子</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">创投圈</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">i黑马</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">腾讯创业</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">BOSS直聘</a> &nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">京东智创</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">智诚包网</a>&nbsp;&nbsp;
-                <a href="http://test.helpyouworkeasy.com:3000/" target="_blank">36氪</a>&nbsp;&nbsp;
+                <a href="http://www.helpyouworkeasy.com/" target="_blank">一维慧动</a>&nbsp;&nbsp;
+                <a href="http://chuangye.sina.com.cn/" target="_blank">新浪创业</a>&nbsp;&nbsp;
+                <a href="http://www.guokr.com/" target="_blank">果壳网</a>&nbsp;&nbsp;
+                <a href="https://www.itjuzi.com/" target="_blank">IT桔子</a>&nbsp;&nbsp;
+                <a href="http://www.iheima.com/" target="_blank">i黑马</a>&nbsp;&nbsp;
+                <a href="http://tech.qq.com/web/startup.htm" target="_blank">腾讯创业</a>&nbsp;&nbsp;
+                <a href="http://www.bosszhipin.com/" target="_blank">BOSS直聘</a> &nbsp;&nbsp;
+                <a href="http://36kr.com/" target="_blank">36氪</a>&nbsp;&nbsp;
             </span>
             </p>
 
