更新关于我们

--- a/app/views/pages/contctus.html
+++ b/app/views/pages/contctus.html
@@ -7,16 +7,16 @@
                 <h2>联系我们</h2>
                 <div class="help-cont">
                     <p>
-                        客服热线：400-632-3760
-                        <br>客服邮箱：kf@lipin.com</p>
+                        客服热线：400-6093-365
+                        <br>客服邮箱：kefu@51kawu.com</p>
                     <p>
                         产品招商合作：（请发合作资料至邮箱，将有专人跟进）
-                        <br>Email：zs@lipin.com</p>
+                        <br>Email：zs@51kawu.com</p>
                     <p>
                         线上营销合作：
-                        <br>Email：hz@lipin.com</p>
+                        <br>Email：hz@51kawu.com</p>
                     <p>
-                        公司地址：广州市天河区广棠西路13号整栋（部位15）
+                        公司地址：北京市海淀区苏州街20号银丰大厦京东服务中心NO.001（北京地铁10号线苏州街站）
                         <br></p>
                 </div>
             </div>
