--- a/app/views/pages/introduction.html
+++ b/app/views/pages/introduction.html
@@ -8,7 +8,7 @@
                 <div class="help-cont">
                     <p>
                         51卡务网
-                        <span class="text-red">（www.lipin.com / www.lipinka.com）</span>
+                        <span class="text-red">（www.51kawu.com / www.51kawu.com）</span>
                         属于渔人信息技术（广州）有限公司，是运营关于二手卡回收服务的网站，公司成立以来一直致力于卡回收、卡兑换、卡消费、卡资讯服务等业务的合作和拓展。51卡务网暂时只针对网站公布回收的卡进行回收处理，主营业务具体如下：
                     </p>
                     <h5>1、电商卡回收：</h5>
@@ -43,8 +43,8 @@
                     </p>
                     <h5>7、公司联系方式：</h5>
                     <p>
-                        联系地址：广东省广州市天河区广棠西路13号整栋
-                        <br>联系电话：400-872-2002</p>
+                        联系地址：北京市海淀区苏州街20号银丰大厦京东服务中心NO.001（北京地铁10号线苏州街站）
+                        <br>联系电话：400-6093-365</p>
                 </div>
             </div>
         </div>
