--- a/app/views/pages/help.html
+++ b/app/views/pages/help.html
@@ -11,15 +11,14 @@
 					<h3>当面交易方式</h3>
 					<p>为了方便您的二手卡回收，我们特意推出新的交易方式：当面交易</p>
 					<p>
-						您可以到我们提供的地址，通过我们的客服电话（ <strong class="text-red">400-632-3760</strong>
+						您可以到我们提供的地址，通过我们的客服电话（ <strong class="text-red">400-6093-365</strong>
 						）联系客服当面交易
 					</p>
 					<p>
-						目前当面交易仅支持： <strong>广州市、深圳市和北京市</strong>
+						目前当面交易仅支持： <strong>北京市,天津市</strong>
 					</p>
-					<p class="text-blue">广州市当面交易地址：广州市番禺区洛溪新城吉祥北园D区南一街9幢</p>
-					<p class="text-success">深圳市当面交易地址：深圳市宝安区石岩街道塘头松白路鸿福</p>
-					<p class="text-red">北京市当面交易地址：北京市丰台区大红门街道苗圃东里</p>
+					<p class="text-blue">北京当面交易地址：北京市海淀区苏州街20号银丰大厦京东服务中心NO.001（北京地铁10号线苏州街站）</p>
+					<p class="text-success">天津当面交易地址：天津市南开区榕苑路15号鑫茂科技国家级孵化器大厦（天津地铁3号线华苑站）</p>
 				</div>
 			</div>
 		</div>
