--- a/app/views/includes/userfooter.html
+++ b/app/views/includes/userfooter.html
@@ -1,83 +1,76 @@
+
 <div class="footer">
-	<div class="footer-links">
-		<div class="container" style="width: 800px">
-			<dl class="col-links">
-				<dt>交易方式</dt>
-				<dd>
-					<a href="/help/help.html" target="_blank">全国交易方式</a>
-				</dd>
-				<dd>
-					<a href="/help/help.html" target="_blank">当面交易方式</a>
-				</dd>
-			</dl>
-			<dl class="col-links">
-				<dt>帮助中心</dt>
-				<dd>
-					<a href="/help/questions.html" target="_blank">常见问题</a>
-				</dd>
-				<dd>
-					<a href="/company/agreement.html" target="_blank">服务条款</a>
-				</dd>
-			</dl>
-			<dl class="col-links">
-				<dt>关于我们</dt>
-				<dd>
-					<a href="/company/introduction.html" target="_blank">公司简介</a>
-				</dd>
-				<dd>
-					<a href="/company/disclaimer.html" target="_blank">免责声明</a>
-				</dd>
-				<dd>
-					<a href="/company/contctus.html" target="_blank">联系我们</a>
-				</dd>
-				<dd>
-					<a href="/help/cooperation.html" target="_blank">商家合作</a>
-				</dd>
-			</dl>
-			<dl class="col-links">
-				<dt>关注我们</dt>
-				<dd>
-					<a href="">新浪微博</a>
-				</dd>
-				<dd>
-					<a href="">官方微信</a>
-				</dd>
-			</dl>
-			<div class="col-contact">
-				<p class="phone">xxx-xxxx-xxxx</p>
-				<p class="time">（周一至周日 9:00-18:00）</p>
-				<a class="btn btn-primary btn-sm" href="">联系在线客服</a>
-			</div>
-		</div>
-	</div>
-	<div class="copyright">
-		<div class="container" style="width: 800px">
-			<p class="pull-left">Copyright © 2015 www.kawu.com 51卡务网络科技有限公司 版权所有</p>
-			<p class="pull-right">
-				<a href="" target="_blank">粤ICP备xxxxx号-1</a>
-				<span class="sep">|</span>
-				服务电话：xxx-xxxx-xxxx
-			</p>
-		</div>
-	</div>
+    <div class="footer-box">
+        <div class="re-code" style="width: 100%">
+            <div class="container">
+                <ul class="supply">
+                    <li>
+                        <ul>
+                            <li class="title">交易方式</li>
+                            <li><a href="/help/help.html" target="_blank">全国交易方式</a></li>
+                            <li><a href="/help/help.html" target="_blank">当面交易方式</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul>
+                            <li class="title">帮助中心</li>
+                            <li><a href="/help/questions.html" target="_blank">常见问题</a></li>
+                            <li><a href="/company/agreement.html" target="_blank">服务条款</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul>
+                            <li class="title">关于我们</li>
+                            <li><a href="/company/introduction.html" target="_blank">公司简介</a></li>
+                            <li><a href="/company/disclaimer.html" target="_blank>免责声明</a></li>
+                            <li><a href="/company/contctus.html" target="_blank">联系我们</a></li>
+                            <li><a href="/help/cooperation.html" target="_blank">商家合作</a></li>
+                        </ul>
+                    </li>
+                    <li class="last">
+                        <ul>
+                            <li class="title">关注我们</li>
+                            <li><a href="">新浪微博</a></li>
+                            <li><a href="">官方微信</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <b class="quare"><img class="square" src="/img/code.jpg" alt=""/></b>
+                <span class="focus">
+                    扫描二维码<br>
+                    关注51卡务微信<br>
+                    卡务一手掌握
+                </span>
+
+                <div class="support">
+                    <h4>服务支持</h4>
+
+                    <h2>400-6093-365</h2>
+
+                    <p>周一至周日9:00-21:00</p>
+                    <span>售后服务/投诉处理</span>
+                </div>
+            </div>
+        </div>
+        <div class="link">
+            <p>
+            <span>
+                友情链接:&nbsp;&nbsp;
+                <a href="http://www.helpyouworkeasy.com/" target="_blank">一维慧动</a>&nbsp;&nbsp;
+                <a href="http://chuangye.sina.com.cn/" target="_blank">新浪创业</a>&nbsp;&nbsp;
+                <a href="http://www.guokr.com/" target="_blank">果壳网</a>&nbsp;&nbsp;
+                <a href="https://www.itjuzi.com/" target="_blank">IT桔子</a>&nbsp;&nbsp;
+                <a href="http://www.iheima.com/" target="_blank">i黑马</a>&nbsp;&nbsp;
+                <a href="http://tech.qq.com/web/startup.htm" target="_blank">腾讯创业</a>&nbsp;&nbsp;
+                <a href="http://www.bosszhipin.com/" target="_blank">BOSS直聘</a> &nbsp;&nbsp;
+                <a href="http://36kr.com/" target="_blank">36氪</a>&nbsp;&nbsp;
+            </span>
+            </p>
+
+            <p>
+                <span>copyright©2015-2016&nbsp;津和财世纪信息技术有限公司&nbsp;版权所有&nbsp;&nbsp;&nbsp;&nbsp;津ICP备15006089号-2</span>
+            </p>
+        </div>
+
+    </div>
 </div>
-<div class="backtop" id="back-to-top">
-	<ul class="backtop-group">
-		<li>
-			<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
-			<div class="dropdown-menu">
-				<img src="./用户登录 - 51卡务网_files/wx.png" alt=""></div>
-		</li>
-		<li>
-			<a class="iconimg qq" target="_blank" href="">QQ在线咨询</a>
-		</li>
-		<li>
-			<a class="iconimg online" href="">在线客服</a>
-		</li>
-		<li>
-			<a class="iconimg totop" id="totop" href="signin.html?url=%2Faccount.html#top" style="display: none;">回到顶部</a>
-		</li>
-	</ul>
-</div>
-<div id="modal-dialog" class="modal hide"></div>
-<div class="modal-cover hide" id="modal-dialog-cover"></div>
