--- a/app/views/includes/userleft.html
+++ b/app/views/includes/userleft.html
@@ -19,7 +19,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="/user/sellcards.html">
+					<a href="/user/cardsRecovery.html" target="_blank">
 						<i class="iconfont icon-sell"></i>
 						我要卖卡
 					</a>
@@ -30,12 +30,12 @@
 						卖卡记录
 					</a>
 				</li>
-				<li>
+				<!-- <li>
 					<a href="/user/myorder.html">
 						<i class="iconfont icon-order"></i>
 						我的订单
 					</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		<div class="sidebar-nav">
