--- a/app/views/includes/userleft.html
+++ b/app/views/includes/userleft.html
@@ -1,5 +1,6 @@
 <div class="view-framework-sidebar">
 	<div class="sidebar-inner">
+		<div class="sidebar-weixin"></div>
 		<div class="sidebar-nav">
 			<div class="sidebar-title">
 				<i class="iconfont icon-dashboard"></i>
@@ -33,7 +34,7 @@
 			</ul>
 		</div>
 		<div class="sidebar-nav">
-			<div class="/user/sidebar-title">
+			<div class="sidebar-title">
 				<i class="iconfont icon-set"></i>
 				资料管理
 			</div>
