--- a/app/views/pages/admin/sellDetail.html
+++ b/app/views/pages/admin/sellDetail.html
@@ -7,7 +7,7 @@
 			<div class="container-fluid">
 				<div class="view-framework-main">
 					<h3 class="clearfix">
-						<a class="btn btn-blue btn-small pull-right" href="/user/sellCards.html">我要卖卡</a>
+						<a class="btn btn-blue btn-small pull-right" href="/user/cardsRecovery.html">我要卖卡</a>
 						卖卡记录
 					</h3>
 					<div class="box">
