--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -68,7 +68,7 @@
             </p>
 
             <p>
-                <span>copyright©2015-2016&nbsp;津和财世纪信息技术有限公司&nbsp;版权所有&nbsp;&nbsp;&nbsp;&nbsp;津ICP备15006089号-2</span>
+                <span>copyright©2015-2016&nbsp;天津和财世纪信息技术有限公司&nbsp;版权所有&nbsp;&nbsp;&nbsp;&nbsp;津ICP备15006089号-2</span>
             </p>
         </div>
 
