--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -181,7 +181,7 @@
 		   </div>
         </div>
         <div class="service">
-            <img src="img/1_04.jpg"/>
+            <!--<img src="img/1_04.jpg"/>-->
         </div>
         <div class="pay">
             <div class="container">
