--- a/app/views/pages/admin/myDatum.html
+++ b/app/views/pages/admin/myDatum.html
@@ -94,25 +94,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div class="backtop" id="back-to-top">
-		<ul class="backtop-group">
-			<li>
-				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
-				<div class="dropdown-menu">
-					<img src="" alt=""></div>
-			</li>
-			<li>
-				<a class="iconimg qq" target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=11215476&amp;site=qq&amp;menu=yes">QQ在线咨询</a>
-			</li>
-			<li>
-				<a class="iconimg online" href="javascript:NTKF.im_openInPageChat(&#39;kf_9665_1445856633743&#39;)">在线客服</a>
-			</li>
-			<li>
-				<a class="iconimg totop" id="totop" href="account/act_profile#top" style="display: none;">回到顶部</a>
-			</li>
-		</ul>
-	</div>
-	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div> -->
+	<%- include ../../includes/float.html %>
 </body>
 </html>
