--- a/app/views/pages/admin/setEmail.html
+++ b/app/views/pages/admin/setEmail.html
@@ -1,4 +1,6 @@
 <%- include ../../userlayout.html %>
+<link rel="stylesheet" type="text/css" href="/css/validform.css">
+<script type="text/javascript" src="/js/Validform_v5.3.2_min.js"></script>
 	<div id="bank-dialog" class="modal fn-hide"></div>
 		<div class="view-framework">
 		<%- include ../../includes/userleft.html %>		<div class="view-framework-body">
@@ -36,10 +38,10 @@
 								</div>
 								<div class="col-xs-3">
 									<div class="mr4">
-										<input class="form-control" id="emailno" type="text" name="emailno"></div>
+										<input class="form-control" id="emailno" type="text" name="emailno" placeholder="邮箱" datatype="e" sucmsg="OK！" nullmsg="请输入邮箱！" errormsg="请输入正确的邮箱！"></div>
 								</div>
 							</div>
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<div class="col-xs-2 col-xs-offset-1">
 									<label class="control-label" for="ecodeno">邮箱验证码：</label>
 								</div>
@@ -49,15 +51,15 @@
 								</div>
 								<div class="col-xs-6">
 									<div class="pl10">
-										<a class="btn" href="javascript:;" onclick="getcode(this,&#39;eget&#39;,&#39;email&#39;);" id="emcode">获取验证码</a>
+										<a class="btn" href="javascript:;" id="emcode">获取验证码</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="form-group pb30">
 								<div class="col-xs-3 col-xs-offset-3">
 									<input type="hidden" name="refer" value="/account/act_emailsucceed">
 									<input type="hidden" name="formhash" value="3f959c23">
-									<a class="btn btn-primary btn-block" onclick="getcode(this,&#39;eset&#39;,&#39;email&#39;);">提交</a>
+									<input class="btn btn-primary btn-block" id="submit" value="提交" type="submit">
 								</div>
 							</div>
 						</form>
@@ -70,13 +72,13 @@
 						<h5> <strong>· 邮箱可正常使用但是收不到验证码怎么办？</strong>
 						</h5>
 						<p>
-							请检查您的垃圾邮件或广告邮件，并建议您在邮箱设置中，将51卡务网发件人（service@lipin.com）设置为白名单，如果您5分钟内仍未收到验证邮件，您可以重新发送。
+							请检查您的垃圾邮件或广告邮件，并建议您在邮箱设置中，将51卡务网发件人（xxxx@xxxxx.com）设置为白名单，如果您5分钟内仍未收到验证邮件，您可以重新发送。
 						</p>
 						<h5>
 							<strong>· 无法通过验证？</strong>
 						</h5>
 						<p>
-							如果您的手机和邮箱已经无法正常使用，请发送账号名（手机/邮箱/用户名）、联系手机至service@lipin.com，客服将在收到邮件后两小时内联系您。（客服工作时间为09:00-18:00）
+							如果您的手机和邮箱已经无法正常使用，请发送账号名（手机/邮箱/用户名）、联系手机至xxxxx@xxxx.com，客服将在收到邮件后两小时内联系您。（客服工作时间为09:00-18:00）
 						</p>
 					</div>
 				</div>
@@ -84,25 +86,30 @@
 			</div>
 		</div>
 	</div>
-	<div class="backtop" id="back-to-top">
-		<ul class="backtop-group">
-			<li>
-				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
-				<div class="dropdown-menu">
-					<img src="./设置邮箱 - 51卡务网_files/wx.png" alt=""></div>
-			</li>
-			<li>
-				<a class="iconimg qq" target="_blank" href="">QQ在线咨询</a>
-			</li>
-			<li>
-				<a class="iconimg online" href="javascript:NTKF.im_openInPageChat(&#39;kf_9665_1445856633743&#39;)">在线客服</a>
-			</li>
-			<li>
-				<a class="iconimg totop" id="totop" href="account/act_email#top" style="display: none;">回到顶部</a>
-			</li>
-		</ul>
-	</div>
-	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div>
+	<%- include ../../includes/float.html %>
 </body>
+<script type="text/javascript">
+	$(function (){
+		$("#submitemail").Validform({
+			beforeSubmit:function() {
+				sendemail ();
+				return false
+			}}
+		);
+		function sendemail (){
+			var emailno = $("#emailno").val();
+			var data = {
+				email: emailno
+			}
+			sajax('/','POST',data,function (data){
+				if(data.code == 200){
+					alert(data.msg);
+					window.location.reload();
+				}else{
+					alert(data.msg);
+				}
+			})
+		}
+	})
+</script>
 </html>
