--- a/app/views/pages/admin/setOrderPassword.html
+++ b/app/views/pages/admin/setOrderPassword.html
@@ -21,6 +21,7 @@
 						</ul>
 						<div class="py50">
 							<!-- <form action="" method="post" id="newpass"> -->
+							<% if(paypassword != ""){ %>
 								<div class="form-group">
 									<div class="col-xs-2">
 										<label class="control-label" for="oldpsw">原支付密码：</label>
@@ -30,6 +31,9 @@
 											<input class="form-control" id="oldpsw" name="oldpsw" type="password"></div>
 									</div>
 								</div>
+							<% }else{ %>
+								<input type="hidden" value="" id="oldpwd">
+				            <% } %>
 								<div class="form-group">
 									<div class="col-xs-2">
 										<label class="control-label" for="newpsw">新支付密码：</label>
@@ -81,25 +85,6 @@
 			return false;
 		})
 	</script>
-<!-- 	<div class="backtop" id="back-to-top">
-		<ul class="backtop-group">
-			<li>
-				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
-				<div class="dropdown-menu">
-					<img src="/wx.png" alt=""></div>
-			</li>
-			<li>
-				<a class="iconimg qq" target="_blank" href="">QQ在线咨询</a>
-			</li>
-			<li>
-				<a class="iconimg online" href="javascript:NTKF.im_openInPageChat(&#39;kf_9665_1445856633743&#39;)">在线客服</a>
-			</li>
-			<li>
-				<a class="iconimg totop" id="totop" href="account/act_password#top" style="display: none;">回到顶部</a>
-			</li>
-		</ul>
-	</div>
-	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div> -->
+	<%- include ../../includes/float.html %>
 </body>
 </html>
