--- a/app/views/pages/admin/setPassword.html
+++ b/app/views/pages/admin/setPassword.html
@@ -90,25 +90,6 @@
 			</div>
 		</div>
 	</div>
-<!-- 	<div class="backtop" id="back-to-top">
-		<ul class="backtop-group">
-			<li>
-				<a class="iconimg wap" data-hover="dropdown" href="javascript:;">加关注</a>
-				<div class="dropdown-menu">
-					<img src="./密码设置 - 51卡务网_files/wx.png" alt=""></div>
-			</li>
-			<li>
-				<a class="iconimg qq" target="_blank" href="">QQ在线咨询</a>
-			</li>
-			<li>
-				<a class="iconimg online" href="javascript:NTKF.im_openInPageChat(&#39;kf_9665_1445856633743&#39;)">在线客服</a>
-			</li>
-			<li>
-				<a class="iconimg totop" id="totop" href="account/act_password#top" style="display: none;">回到顶部</a>
-			</li>
-		</ul>
-	</div>
-	<div id="modal-dialog" class="modal hide"></div>
-	<div class="modal-cover hide" id="modal-dialog-cover"></div> -->
+	<%- include ../../includes/float.html %>
 </body>
 </html>
